--- a/legal/index.html
+++ b/legal/index.html
@@ -1,1 +1,76 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Legal • ARH Rentals</title>
+  <link rel="stylesheet" href="/assets/styles.css"/>
+</head>
+<body>
 
+<header class="site-header">
+  <div class="container navbar">
+    <a class="brand" href="/">
+      <img class="brand-logo" src="/assets/arh-logo.png" alt="ARH Rentals Logo">
+      <div class="brand-title">
+        <strong>ARH Rentals</strong>
+        <span>by Anjani Real Heights</span>
+      </div>
+    </a>
+
+    <nav class="menu">
+      <a href="/">Home</a>
+      <a href="/listings">Listings</a>
+      <a href="/pricing">Plans</a>
+      <a href="/legal">Legal</a>
+      <a class="btn btn-primary" href="/post">Post Property</a>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <section class="hero">
+    <h1>Legal Disclaimer & Terms</h1>
+    <p>ARH Rentals is an information-access platform designed to help owners and tenants discover rental opportunities.</p>
+  </section>
+
+  <section class="card">
+    <div class="card-body">
+      <h2>No Brokerage</h2>
+      <p class="muted">ARH Rentals does not act as a property broker, agent, or mediator. We only provide access to information shared by property owners.</p>
+
+      <div class="hr"></div>
+
+      <h2>No Guarantee</h2>
+      <p class="muted">We do not guarantee or assure that users will receive rental leads, responses, or successful transactions. Lead generation depends on market demand, location, pricing, and user activity.</p>
+
+      <div class="hr"></div>
+
+      <h2>No Responsibility for Deals</h2>
+      <p class="muted">Any communication, visit, negotiation, payment, or agreement happens directly between the owner and tenant. ARH Rentals is not responsible for disputes, losses, fraud, or misrepresentation.</p>
+
+      <div class="hr"></div>
+
+      <h2>Information Accuracy</h2>
+      <p class="muted">Listing details are provided by owners. ARH Rentals does not verify ownership, legality, or accuracy of property details.</p>
+
+      <div class="hr"></div>
+
+      <h2>Service Area</h2>
+      <p class="muted">Currently operational only in selected areas of Hisar (Phase 1: 125001, 125005).</p>
+
+      <div class="hr"></div>
+
+      <h2>Acceptance</h2>
+      <p class="muted">By using this website, you agree to all terms and disclaimers mentioned above.</p>
+    </div>
+  </section>
+
+  <footer class="footer">
+    © 2025 ARH Rentals • <a href="/">Home</a>
+  </footer>
+</main>
+
+<script src="/assets/app.js"></script>
+</body>
+</html>
