--- a/listings/index.html
+++ b/listings/index.html
@@ -1,1 +1,137 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Listings • ARH Rentals</title>
+  <link rel="stylesheet" href="/assets/styles.css"/>
+</head>
+<body>
+
+<header class="site-header">
+  <div class="container navbar">
+    <a class="brand" href="/">
+      <img class="brand-logo" src="/assets/arh-logo.png" alt="ARH Rentals Logo">
+      <div class="brand-title">
+        <strong>ARH Rentals</strong>
+        <span>by Anjani Real Heights</span>
+      </div>
+    </a>
+
+    <nav class="menu">
+      <a href="/">Home</a>
+      <a href="/listings">Listings</a>
+      <a href="/pricing">Plans</a>
+      <a href="/legal">Legal</a>
+      <a class="btn btn-primary" href="/post">Post Property</a>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <section class="hero">
+    <h1>Hisar Rentals</h1>
+    <p>Premium listings with clean filters + sorting. Contact details unlock via plans (coming soon).</p>
+  </section>
+
+  <div class="grid">
+    <aside class="card">
+      <div class="card-body">
+        <h2>Filters</h2>
+        <div class="hr"></div>
+
+        <div class="small">PIN Code</div>
+        <input class="input" id="fPin" placeholder="125001"/>
+
+        <div style="height:10px"></div>
+
+        <div class="small">Type</div>
+        <select class="input" id="fType">
+          <option value="">Any</option>
+          <option value="House">House</option>
+          <option value="Shop">Shop</option>
+          <option value="Office">Office</option>
+        </select>
+
+        <div style="height:10px"></div>
+
+        <div class="small">Max Rent</div>
+        <input class="input" id="fMax" placeholder="15000"/>
+
+        <div style="height:10px"></div>
+
+        <div class="small">Sort</div>
+        <select class="input" id="sortBy">
+          <option value="default">Recommended</option>
+          <option value="rent-asc">Rent: Low → High</option>
+          <option value="rent-desc">Rent: High → Low</option>
+        </select>
+
+        <div class="hr"></div>
+        <a class="btn btn-primary" href="/pricing">See Plans</a>
+      </div>
+    </aside>
+
+    <section class="card">
+      <div class="card-body">
+        <h2>Listings</h2>
+        <p class="muted">Demo UI (filters are UI-ready; DB integration next).</p>
+
+        <div id="listingWrap" class="listings" style="margin-top:12px">
+          <div class="listing" data-rent="12000">
+            <div>
+              <h3>2 BHK House</h3>
+              <p>Sector 14 • Hisar</p>
+              <div class="pills">
+                <span class="pill">House</span>
+                <span class="pill">₹12,000</span>
+                <span class="pill">125001</span>
+              </div>
+            </div>
+            <button class="btn">Unlock Details</button>
+          </div>
+
+          <div class="listing" data-rent="18000">
+            <div>
+              <h3>Shop for Rent</h3>
+              <p>Main Market Area</p>
+              <div class="pills">
+                <span class="pill">Shop</span>
+                <span class="pill">₹18,000</span>
+                <span class="pill">125001</span>
+              </div>
+            </div>
+            <button class="btn">Unlock Details</button>
+          </div>
+
+          <div class="listing" data-rent="6500">
+            <div>
+              <h3>1 RK</h3>
+              <p>Near Income Tax Office</p>
+              <div class="pills">
+                <span class="pill">House</span>
+                <span class="pill">₹6,500</span>
+                <span class="pill">125005</span>
+              </div>
+            </div>
+            <button class="btn">Unlock Details</button>
+          </div>
+        </div>
+
+        <div class="hr"></div>
+        <div class="notice">
+          Filters + sorting UI is ready. Next step: connect Worker API to fetch real listings + apply filters server-side.
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <footer class="footer">
+    © 2025 ARH Rentals • <a href="/legal">Legal</a>
+  </footer>
+</main>
+
+<script src="/assets/app.js"></script>
+</body>
+</html>
 
