--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1,1 +1,104 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Pricing • ARH Rentals</title>
+  <link rel="stylesheet" href="assets/styles.css"/>
+</head>
+<body>
+
+<header class="nav">
+  <div class="container nav-inner">
+    <a class="brand" href="index.html">
+      <div class="logo"></div>
+      <div>
+        <h1>ARH Rentals <small>by Anjani Real Heights</small></h1>
+      </div>
+    </a>
+    <nav class="menu">
+      <a href="listings.html">Rentals</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="legal.html">Legal</a>
+      <a class="btn btn-primary" href="post.html">Post Property</a>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <section class="hero">
+    <h2 style="margin:0">Pricing (Hisar • Phase 1)</h2>
+    <p style="color:var(--muted);margin-top:8px">
+      Pricing ensures serious owners & tenants, reduces spam, and keeps the platform premium.
+    </p>
+  </section>
+
+  <section class="section">
+    <h3>Owner Listing Plans</h3>
+    <div class="grid-3">
+      <div class="card"><div class="card-body">
+        <h3>Standard (15 days)</h3>
+        <div class="price">₹ 199</div>
+        <p>1 listing • Visible for 15 days • Auto-hide after expiry (not deleted).</p>
+      </div></div>
+      <div class="card"><div class="card-body">
+        <h3>Premium ⭐ (30 days)</h3>
+        <div class="price">₹ 349</div>
+        <p>1 listing • Higher visibility • Best for faster responses.</p>
+      </div></div>
+      <div class="card"><div class="card-body">
+        <h3>Extended (60 days)</h3>
+        <div class="price">₹ 599</div>
+        <p>1 listing • Long exposure • Ideal if you can wait for right tenant.</p>
+      </div></div>
+    </div>
+  </section>
+
+  <section class="section">
+    <h3>Owner Promotions (Optional)</h3>
+    <div class="grid-3">
+      <div class="card"><div class="card-body">
+        <h3>Featured Listing</h3>
+        <div class="small">7d: ₹399 • 15d: ₹699 • 30d: ₹1,099</div>
+        <p>Limited slots • Rotation-based placement.</p>
+      </div></div>
+      <div class="card"><div class="card-body">
+        <h3>Owner Priority Boost</h3>
+        <div class="small">7d: ₹249 • 15d: ₹399</div>
+        <p>Display preference only • No verification claim.</p>
+      </div></div>
+      <div class="card"><div class="card-body">
+        <h3>Fresh Push (24h)</h3>
+        <div class="small">₹79</div>
+        <p>One-time visibility boost.</p>
+      </div></div>
+    </div>
+  </section>
+
+  <section class="section">
+    <h3>Tenant Unlock Plans (Information Access)</h3>
+    <div class="grid-3">
+      <div class="card"><div class="card-body">
+        <h3>5 Listings Unlock</h3>
+        <div class="price">₹ 199</div>
+        <p>Validity: 7 days • Unlock 5 listing details (phone/photos/address).</p>
+      </div></div>
+      <div class="card"><div class="card-body">
+        <h3>10 Listings Unlock ⭐</h3>
+        <div class="price">₹ 349</div>
+        <p>Validity: 10 days • Unlock 10 listing details.</p>
+      </div></div>
+      <div class="card"><div class="card-body">
+        <h3>Important</h3>
+        <p class="sub">Fees are for digital services (visibility/info access) only. No outcome guarantee.</p>
+      </div></div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    © ARH Rentals • <a href="legal.html">Legal</a>
+  </footer>
+</main>
+</body>
+</html>
 
