--- a/pricing/index.html
+++ b/pricing/index.html
@@ -8,23 +8,26 @@
 </head>
 <body>
 
-<header class="nav">
-  <div class="container nav-inner">
-    <a class="brand" href="index.html">
-      <div class="logo"></div>
-      <div>
-        <h1>ARH Rentals <small>by Anjani Real Heights</small></h1>
+<header class="site-header">
+  <div class="container navbar">
+    <a class="brand" href="/">
+      <img class="brand-logo" src="/assets/arh-logo.png" alt="ARH Rentals Logo">
+      <div class="brand-title">
+        <strong>ARH Rentals</strong>
+        <span>by Anjani Real Heights</span>
       </div>
     </a>
+
     <nav class="menu">
-      <a href="listings.html">Rentals</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="legal.html">Legal</a>
-      <a class="btn btn-primary" href="post.html">Post Property</a>
+      <a href="/">Home</a>
+      <a href="/listings">Listings</a>
+      <a href="/pricing">Plans</a>
+      <a href="/legal">Legal</a>
+      <a class="btn btn-primary" href="/post">Post Property</a>
     </nav>
   </div>
 </header>
-
+  
 <main class="container">
   <section class="hero">
     <h2 style="margin:0">Pricing (Hisar • Phase 1)</h2>
