--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
   </div>
 
   <footer class="footer">
-    © 2025 ARH Rentals • <a href="/legal">Legal</a> • <a href="/pricing">Plans</a>
-    <div style="margin-top:8px">
-      Disclaimer: We do not guarantee or assure 100% lead generation.
-    </div>
-  </footer>
+  © 2025 ARH Rentals • <a href="/legal">Legal</a> • <a href="/pricing">Plans</a>
+  <div style="margin-top:8px">
+    Disclaimer: We do not guarantee or assure 100% lead generation. ARH Rentals is an information-access platform only and is not responsible for any deal/transaction.
+  </div>
+</footer>
 </main>
 
 <script src="/assets/app.js"></script>
