--- a/legal/index.html
+++ b/legal/index.html
@@ -67,8 +67,11 @@
   </section>
 
   <footer class="footer">
-    © 2025 ARH Rentals • <a href="/">Home</a>
-  </footer>
+  © 2025 ARH Rentals • <a href="/legal">Legal</a> • <a href="/pricing">Plans</a>
+  <div style="margin-top:8px">
+    Disclaimer: We do not guarantee or assure 100% lead generation. ARH Rentals is an information-access platform only and is not responsible for any deal/transaction.
+  </div>
+</footer>
 </main>
 
 <script src="/assets/app.js"></script>
