--- a/pricing/index.html
+++ b/pricing/index.html
@@ -99,8 +99,11 @@
   </section>
 
   <footer class="footer">
-    © ARH Rentals • <a href="legal.html">Legal</a>
-  </footer>
+  © 2025 ARH Rentals • <a href="/legal">Legal</a> • <a href="/pricing">Plans</a>
+  <div style="margin-top:8px">
+    Disclaimer: We do not guarantee or assure 100% lead generation. ARH Rentals is an information-access platform only and is not responsible for any deal/transaction.
+  </div>
+</footer>
 </main>
 </body>
 </html>
