--- a/pricing/index.html
+++ b/pricing/index.html
@@ -29,12 +29,18 @@
 </header>
   
 <main class="container">
+  <div style="height:16px"></div>
   <section class="hero">
     <h2 style="margin:0">Pricing (Hisar • Phase 1)</h2>
     <p style="color:var(--muted);margin-top:8px">
       Pricing ensures serious owners & tenants, reduces spam, and keeps the platform premium.
     </p>
   </section>
+  <div class="trust-strip">
+  <span>🔒 Secure Payments</span>
+  <span>✔ Verified Listings</span>
+  <span>📞 Local Support (Hisar)</span>
+</div>
 
   <section class="section">
     <h3>Owner Listing Plans</h3>
