--- a/pricing/index.html
+++ b/pricing/index.html
@@ -36,6 +36,9 @@
       Pricing ensures serious owners & tenants, reduces spam, and keeps the platform premium.
     </p>
   </section>
+  <div class="notice" style="margin-top:14px">
+  ✅ 100% Secure Checkout • ✅ Verified Support • ✅ Clear Refund/Policy Mentioned in Legal
+</div>
   <div class="trust-strip">
   <span>🔒 Secure Payments</span>
   <span>✔ Verified Listings</span>
