--- a/pricing/index.html
+++ b/pricing/index.html
@@ -53,7 +53,7 @@
         <div class="price">₹ 199</div>
         <p>1 listing • Visible for 15 days • Auto-hide after expiry (not deleted).</p>
       </div></div>
-      <div class="card"><div class="card-body">
+      <div class="card featured"><div class="card-body">
         <h3>Premium ⭐ (30 days)</h3>
         <div class="price">₹ 349</div>
         <p>1 listing • Higher visibility • Best for faster responses.</p>
