--- a/pricing/index.html
+++ b/pricing/index.html
@@ -55,6 +55,7 @@
         <a href="/post" class="btn">Choose Standard</a>
       </div></div>
       <div class="card featured"><div class="card-body">
+        <div class="tag">Most Popular</div>
         <h3>Premium ⭐ (30 days)</h3>
         <div class="price">₹ 349</div>
         <p>1 listing • Higher visibility • Best for faster responses.</p>
