--- a/pricing/index.html
+++ b/pricing/index.html
@@ -56,6 +56,7 @@
       </div></div>
       <div class="card featured"><div class="card-body">
         <div class="tag">Most Popular</div>
+        <span class="tag">Most Popular</span>
         <h3>Premium ⭐ (30 days)</h3>
         <div class="price">₹ 349</div>
         <p>1 listing • Higher visibility • Best for faster responses.</p>
