--- a/pricing/index.html
+++ b/pricing/index.html
@@ -48,20 +48,20 @@
   <section class="section">
     <h3>Owner Listing Plans</h3>
     <div class="grid-3">
-      <div class="card"><div class="card-body">
+      <div class="card" data-plan="standard"><div class="card-body">
         <h3>Standard (15 days)</h3>
         <div class="price">₹ 199</div>
         <p>1 listing • Visible for 15 days • Auto-hide after expiry (not deleted).</p>
         <a href="/post?plan=standard" class="btn">Choose Standard</a>
       </div></div>
-      <div class="card featured"><div class="card-body">
+      <div class="card featured" data-plan="premium"><div class="card-body">
         <span class="tag">Most Popular</span>
         <h3>Premium ⭐ (30 days)</h3>
         <div class="price">₹ 349</div>
         <p>1 listing • Higher visibility • Best for faster responses.</p>
         <a href="/post?plan=premium" class="btn btn-primary">Go Premium</a>
       </div></div>
-      <div class="card"><div class="card-body">
+      <div class="card" data-plan="extended"><div class="card-body">
         <h3>Extended (60 days)</h3>
         <div class="price">₹ 599</div>
         <p>1 listing • Long exposure • Ideal if you can wait for right tenant.</p>
