--- a/pricing/index.html
+++ b/pricing/index.html
@@ -117,6 +117,18 @@
   </div>
 </footer>
 </main>
+  <script>
+  const params = new URLSearchParams(window.location.search);
+  const plan = params.get("plan");
+
+  if (plan) {
+    const el = document.querySelector(`[data-plan="${plan}"]`);
+    if (el) {
+      el.classList.add("selected");
+      el.scrollIntoView({ behavior: "smooth", block: "center" });
+    }
+  }
+</script>
 </body>
 </html>
 
